bk_ida/gccida/g0/expand_function_start
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:6974:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v10; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:6979:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:6981:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v17; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:6989:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:6990:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v26; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:7000:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tem; // [rsp+48h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:7015:34: error: use of undeclared identifier 'machine_mode'
last_ptr = assign_stack_local( ( machine_mode)v7, v6, 0); 
                                 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:7044:20: error: use of undeclared identifier 'machine_mode'
x = gen_rtx_MEM( ( machine_mode)LOBYTE( subr->decl.result->block.supercontext), value_address); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/function.c:7055:35: error: use of undeclared identifier 'machine_mode'
result->decl.rtl = gen_reg_rtx( ( machine_mode)*( ( unsigned __int8 *)hard_reg + 2)); 
                                  ^
9 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/expand_function_start/src/obj/function.o] Error 1
